--- a/css/resume.css
+++ b/css/resume.css
@@ -533,6 +533,10 @@ p {
 .skills .skill-list {
     list-style: none;
     flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .skills .skill-list li {
@@ -644,7 +648,7 @@ body > *:not(.intro-screen) {
 }
 
 #navbar {
-    background: linear-gradient(to right, #3DEB55, #A567F3, #2F49F4);
+    background: linear-gradient(to right, #333, #000);
     padding: 10px;
     position: fixed;
     top: 0;
@@ -669,6 +673,7 @@ body > *:not(.intro-screen) {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 #navbar ul li a:hover {
