--- a/css/resume.css
+++ b/css/resume.css
@@ -260,17 +260,19 @@ p {
     font-weight: 400;
     font-size: var(--font-40);
     line-height: 150%;
-
-    margin-bottom: 180px;
+    margin-bottom: 20px;
 }
 
 .about .achievements {
     list-style: none;
-    font-size: 24px;
+    font-size: 30px;
+    margin-left: 250px;
+    margin-bottom: 100px;
 }
 
 .about .achievements li {
-    margin: 15px 0;
+    text-align: left;
+    margin-left: 400px;
 }
 
 /* === PROJECTS === */
@@ -366,7 +368,16 @@ p {
     justify-content: space-between;
 }
 
+.project-cards {
+    display: flex;
+    justify-content: space-between;
+}
 
+.other-cards {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
 
 .projects .card .card-buttons .card-button--site,
 .projects .card .card-buttons .card-button--code {
